<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="@dimen/topBarPadding"
            android:background="@color/primary"
            android:elevation="@dimen/topBarElevation">

            <TextView
                android:id="@+id/textViewCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Company Name Goes Here Inc."/>


            <TextView
                android:id="@+id/textViewMoney"
                android:layout_below="@id/textViewCompanyName"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/topBarVerticalPadding"
                android:text="$ 143.82k"/>

            <!-- Maybe these are better not shown here.
            <TextView
                android:id="@+id/textViewCps"
                android:layout_alignTop="@id/textViewMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:text="C/s 12"/>

            <TextView
                android:id="@+id/textViewQuality"
                android:layout_alignTop="@id/textViewMoney"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:text="Q 0.42"/>
                -->


        </RelativeLayout>


        <FrameLayout
            android:id="@+id/layoutFragmentContainer"
            android:layout_below="@id/layoutTopBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </RelativeLayout>

    <!-- View for the navigation drawer -->
    <RelativeLayout
        android:layout_width="@dimen/navigationDrawerWidth"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/primary_dark">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/navigationDrawerItemMargin"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:text="$ / s"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:text="Code / s"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_margin="@dimen/navigationDrawerItemMargin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNavMoneyRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:text="30.00"
                />

            <TextView
                android:id="@+id/textViewNavCodeRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:text="123.00"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/textViewNavProjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_margin="@dimen/navigationDrawerItemMargin"
                android:text="[ ] Projects"
                />

            <TextView
                android:id="@+id/textViewNavProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_margin="@dimen/navigationDrawerItemMargin"
                android:text="[ ] Product Development"
                />

            <TextView
                android:id="@+id/textViewNavEmployees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_margin="@dimen/navigationDrawerItemMargin"
                android:text="[ ] Human Resources"
                />

            <TextView
                android:id="@+id/textViewNavAssets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_margin="@dimen/navigationDrawerItemMargin"
                android:text="[ ] Assets"
                />

            <TextView
                android:id="@+id/textViewNavFinances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_margin="@dimen/navigationDrawerItemMargin"
                android:text="[ ] Finances"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNavStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_margin="@dimen/navigationDrawerItemMargin"
                android:text="[ ] Stats" />

            <TextView
                android:id="@+id/textViewNavAchievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_margin="@dimen/navigationDrawerItemMargin"
                android:text="[ ] Achievements" />

            <TextView
                android:id="@+id/textViewNavSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_margin="@dimen/navigationDrawerItemMargin"
                android:text="[ ] Settings" />

        </LinearLayout>

    </RelativeLayout>

    <!--ListView
        android:id="@+id/listViewNavDrawer"
        android:layout_width="@dimen/navigationDrawerWidth"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/colorPrimaryDark"/-->

</android.support.v4.widget.DrawerLayout>