...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Back button for sub fragments.
         Remove it for main fragments. -->
        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="monospace"
            android:text="&lt; Back"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_centerInParent="true"
...
